// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default Render 1`] = `
<div
  className="wallet-ecency"
>
  <div
    className="wallet-main"
  >
    <div
      className="wallet-info"
    >
      <div
        className="balance-row alternative"
      >
        <div
          className="balance-info"
        >
          <div
            className="title"
          >
            Ecency Points
          </div>
          <div
            className="description"
          >
            Points can be used for in-app services, like Promote, Boost, Gifting. Earn them just by using Ecency apps and improve your experience.
          </div>
        </div>
        <div
          className="balance-values"
        >
          <div
            className="amount"
          >
            <div
              className="amount-actions"
            />
            0.000
             
            POINTS
          </div>
        </div>
      </div>
      <div
        className="balance-row estimated alternative"
      >
        <div
          className="balance-info"
        >
          <div
            className="title"
          >
            Estimated Points Value
          </div>
          <div
            className="description"
          >
            The estimated value is based on purchase value of Points.
          </div>
        </div>
        <div
          className="balance-values"
        >
          <div
            className="amount amount-bold"
          >
            $ 0.000
          </div>
        </div>
      </div>
      <div
        className="get-points"
      >
        <div
          className="points-types"
        >
          <div
            className="points-types-title"
          >
            How to earn more Points
          </div>
          <div
            className="points-types-list"
          >
            <div
              className="point-reward-type"
              title="You can earn point by posting regularly. Posting gives you 15 points."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                15
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Each comment you make helps you to grow your audience and make friendship but also earns you 5 points."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                5
              </span>
            </div>
            <div
              className="point-reward-type"
              title="By voting you give reward to other creators and show your appreciation but also earn 0.01 x vote weight points."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                0.3
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Share what post you like with your friends and earn 1 points."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                1
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Checking in on Ecency gives you 0.25 points and helps you stay connected with your friends."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                0.25
              </span>
            </div>
            <div
              className="point-reward-type"
              title="When you login into Ecency you are entitled to earn 10 points automatically."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,6A2,2 0 0,0 10,8A2,2 0 0,0 12,10A2,2 0 0,0 14,8A2,2 0 0,0 12,6M12,13C14.67,13 20,14.33 20,17V20H4V17C4,14.33 9.33,13 12,13M12,14.9C9.03,14.9 5.9,16.36 5.9,17V18.1H18.1V17C18.1,16.36 14.97,14.9 12,14.9Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                10
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Consistent use of app gives you extra chances to earn more 10 points, be more active and earn more."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M0.41,13.41L6,19L7.41,17.58L1.83,12M22.24,5.58L11.66,16.17L7.5,12L6.07,13.41L11.66,19L23.66,7M18,7L16.59,5.58L10.24,11.93L11.66,13.34L18,7Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                10
              </span>
            </div>
            <div
              className="point-reward-type"
              title="You can earn ~100 points per day for each 1000HP delegation."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.58,16.8L12,14.5L8.42,16.8L9.5,12.68L6.21,10L10.46,9.74L12,5.8L13.54,9.74L17.79,10L14.5,12.68M20,12C20,10.89 20.9,10 22,10V6C22,4.89 21.1,4 20,4H4A2,2 0 0,0 2,6V10C3.11,10 4,10.9 4,12A2,2 0 0,1 2,14V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V14A2,2 0 0,1 20,12Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                10
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Register your community to get 20 points for per post published with Ecency applications."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,5.5A3.5,3.5 0 0,1 15.5,9A3.5,3.5 0 0,1 12,12.5A3.5,3.5 0 0,1 8.5,9A3.5,3.5 0 0,1 12,5.5M5,8C5.56,8 6.08,8.15 6.53,8.42C6.38,9.85 6.8,11.27 7.66,12.38C7.16,13.34 6.16,14 5,14A3,3 0 0,1 2,11A3,3 0 0,1 5,8M19,8A3,3 0 0,1 22,11A3,3 0 0,1 19,14C17.84,14 16.84,13.34 16.34,12.38C17.2,11.27 17.62,9.85 17.47,8.42C17.92,8.15 18.44,8 19,8M5.5,18.25C5.5,16.18 8.41,14.5 12,14.5C15.59,14.5 18.5,16.18 18.5,18.25V20H5.5V18.25M0,20V18.5C0,17.11 1.89,15.94 4.45,15.6C3.86,16.28 3.5,17.22 3.5,18.25V20H0M24,20H20.5V18.25C20.5,17.22 20.14,16.28 19.55,15.6C22.11,15.94 24,17.11 24,18.5V20Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                20
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="p-transaction-list"
      >
        <div
          className="transaction-list-header"
        >
          <h2>
            History
          </h2>
          <select
            className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 "
            onChange={[Function]}
            type="select"
            value={0}
          >
            <option
              value="0"
            >
              All History
            </option>
            <option
              value={10}
            >
              Points for heartbeat
            </option>
            <option
              value={20}
            >
              Points for login
            </option>
            <option
              value={30}
            >
              Usage bonus
            </option>
            <option
              value={100}
            >
              Points for post
            </option>
            <option
              value={110}
            >
              Points for comment
            </option>
            <option
              value={120}
            >
              Points for vote
            </option>
            <option
              value={130}
            >
              Points for reblog
            </option>
            <option
              value={150}
            >
              Delegation reward
            </option>
            <option
              value={160}
            >
              Referral reward
            </option>
            <option
              value={170}
            >
              Community reward
            </option>
            <option
              value={998}
            >
              Outgoing transfer
            </option>
            <option
              value={999}
            >
              Incoming transfer
            </option>
          </select>
        </div>
        <div
          className="transaction-list-body"
        >
          <p
            className="text-gray-600 empty-list"
          >
            Nothing here
          </p>
        </div>
      </div>
    </div>
    <div
      className="wallet-menu"
    >
      <a
        className="menu-item ecency active"
        href="/@user1/points"
        onClick={[Function]}
      >
        <span
          className="title"
        >
          Ecency
        </span>
        <span
          className="sub-title"
        >
          Points
        </span>
        <span
          className="platform-logo"
        >
          <img
            alt="ecency"
            src="logo-small-transparent.png"
          />
        </span>
      </a>
      <a
        className="menu-item hive"
        href="/@user1/wallet"
        onClick={[Function]}
      >
        <span
          className="title"
        >
          Hive
        </span>
        <span
          className="sub-title"
        >
          Wallet
        </span>
        <span
          className="platform-logo"
        >
          <svg
            viewBox="0 0 512 512"
          >
            <path
              d="M260.353,254.878,131.538,33.1a2.208,2.208,0,0,0-3.829.009L.3,254.887A2.234,2.234,0,0,0,.3,257.122L129.116,478.9a2.208,2.208,0,0,0,3.83-.009L260.358,257.113A2.239,2.239,0,0,0,260.353,254.878Zm39.078-25.713a2.19,2.19,0,0,0,1.9,1.111h66.509a2.226,2.226,0,0,0,1.9-3.341L259.115,33.111a2.187,2.187,0,0,0-1.9-1.111H190.707a2.226,2.226,0,0,0-1.9,3.341ZM511.7,254.886,384.9,33.112A2.2,2.2,0,0,0,382.99,32h-66.6a2.226,2.226,0,0,0-1.906,3.34L440.652,256,314.481,476.66a2.226,2.226,0,0,0,1.906,3.34h66.6a2.2,2.2,0,0,0,1.906-1.112L511.7,257.114A2.243,2.243,0,0,0,511.7,254.886ZM366.016,284.917H299.508a2.187,2.187,0,0,0-1.9,1.111l-108.8,190.631a2.226,2.226,0,0,0,1.9,3.341h66.509a2.187,2.187,0,0,0,1.9-1.111l108.8-190.631A2.226,2.226,0,0,0,366.016,284.917Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </a>
      <a
        className="menu-item hive-engine"
        href="/@user1/engine"
        onClick={[Function]}
      >
        <span
          className="title"
        >
          Engine
        </span>
        <span
          className="sub-title"
        >
          Tokens
        </span>
        <span
          className="platform-logo"
        >
          <svg
            viewBox="0 0 512 512"
          >
            <path
              d="M 226.63385,494.21287 A 38.3444,37.175214 0 0 0 153.83361,475.22554 257.02086,249.18385 0 0 1 103.53493,447.0743 38.334092,37.165221 0 0 0 50.192923,395.44372 253.78942,246.05095 0 0 1 21.179508,346.66625 38.3444,37.175214 0 0 0 1.66458,276.06583 a 254.27646,246.52314 0 0 1 0,-56.32245 38.334092,37.165221 0 0 0 19.576775,-70.59294 256.99767,249.16137 0 0 1 29.034029,-48.77497 38.3444,37.175214 0 0 0 53.256966,-51.73051 254.23523,246.48315 0 0 1 50.30899,-28.111257 38.3444,37.175214 0 0 0 72.83374,-18.9198855 254.18884,246.43819 0 0 1 58.08353,0 38.334092,37.165221 0 0 0 72.78993,18.9873395 257.52851,249.67603 0 0 1 50.29867,28.143736 38.3444,37.175214 0 0 0 53.35748,51.630577 254.03681,246.29078 0 0 1 28.99538,48.79496 38.3444,37.175214 0 0 0 19.51235,70.59293 253.70438,245.9685 0 0 1 0,56.35244 38.334092,37.165221 0 0 0 -19.58451,70.57044 257.22186,249.37873 0 0 1 -29.0366,48.76749 38.3444,37.175214 0 0 0 -53.25697,51.7305 253.44927,245.72117 0 0 1 -50.3296,28.11126 38.3444,37.175214 0 0 0 -72.81055,18.91989 252.9545,245.24149 0 0 1 -58.07322,0 z M 63.98196,247.91459 A 191.72201,185.87607 0 1 0 255.70396,62.03853 191.72201,185.87607 0 0 0 63.98196,247.91459 Z M 192.92274,388.54083 353.40745,282.97622 256.9383,212.2159 328.06098,111.68043 A 158.05726,153.23783 0 0 1 192.92274,388.54083 Z M 112.80407,182.5157 A 158.05984,153.24032 0 0 1 319.96175,107.90295 L 159.19101,213.45507 256.30438,282.98621 185.06832,384.9932 A 158.05984,153.24032 0 0 1 112.80407,182.5157 Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </a>
      <a
        className="menu-item spk"
        href="/@user1/spk"
        onClick={[Function]}
      >
        <span
          className="title"
        >
          SPK
        </span>
        <span
          className="sub-title"
        >
          Tokens
        </span>
        <span
          className="platform-logo"
        >
          <svg
            viewBox="0 0 512 512"
          >
            <path
              clipRule="evenodd"
              d="M508.297 4.47022L426.843 94.3876L512 207.049L432.661 208.107L382.942 140.933L367.603 155.743V208.107H299.901V144.107C299.901 144.107 291.967 150.454 279.273 153.627C266.579 156.801 253.355 156.801 253.355 156.801H213.686V208.107H145.455V199.644C145.455 199.644 131.702 212.338 90.4463 212.867C49.1901 213.396 0 190.652 0 190.652L23.2727 141.462C23.2727 141.462 62.9421 161.561 90.4463 159.446C117.95 157.33 114.777 148.867 114.777 148.867C114.777 138.25 96.648 134.663 73.3864 130.06C68.8348 129.159 64.0868 128.22 59.2397 127.181C29.6198 120.834 4.2314 107.237 4.2314 68.4702C4.2314 -13.5133 123.769 0.23893 131.702 1.8257C139.636 3.41246 143.868 4.47022 143.868 4.47022H253.355C253.355 4.47022 263.405 4.47022 279.802 8.70172C296.198 12.9332 299.901 18.7512 299.901 18.7512V4.47022H367.603V75.8752L435.306 4.47022H508.297ZM145.455 64.2389V91.2141C145.455 91.2141 126.942 85.3959 110.545 80.6356C106.006 79.3176 100.979 78.405 96.0835 77.5162C83.2978 75.195 71.405 73.0359 71.405 64.2389C71.405 52.0736 92.0331 51.0158 107.901 52.6025C123.769 54.1893 145.455 64.2389 145.455 64.2389ZM214.215 57.8918V104.966H246.479C259.438 101.925 266.05 92.8009 266.05 81.1645C266.05 71.6041 261.818 61.0654 246.479 57.8918H214.215Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`(2) With active user 1`] = `
<div
  className="wallet-ecency"
>
  <div
    className="wallet-main"
  >
    <div
      className="wallet-info"
    >
      <div
        className="balance-row alternative"
      >
        <div
          className="balance-info"
        >
          <div
            className="title"
          >
            Ecency Points
          </div>
          <div
            className="description"
          >
            Points can be used for in-app services, like Promote, Boost, Gifting. Earn them just by using Ecency apps and improve your experience.
          </div>
        </div>
        <div
          className="balance-values"
        >
          <div
            className="amount"
          >
            <div
              className="amount-actions"
            >
              <div
                className="custom-dropdown float-right"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <div
                  className="dropdown-btn"
                >
                  
                  <div
                    className="menu-down"
                    style={Object {}}
                  >
                    <svg
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7,10L12,15L17,10H7Z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            0.000
             
            POINTS
          </div>
        </div>
      </div>
      <div
        className="balance-row estimated alternative"
      >
        <div
          className="balance-info"
        >
          <div
            className="title"
          >
            Estimated Points Value
          </div>
          <div
            className="description"
          >
            The estimated value is based on purchase value of Points.
          </div>
        </div>
        <div
          className="balance-values"
        >
          <div
            className="amount amount-bold"
          >
            Calculating...
          </div>
        </div>
      </div>
      <div
        className="get-points"
      >
        <div
          className="points-types"
        >
          <div
            className="points-types-title"
          >
            How to earn more Points
          </div>
          <div
            className="points-types-list"
          >
            <div
              className="point-reward-type"
              title="You can earn point by posting regularly. Posting gives you 15 points."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                15
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Each comment you make helps you to grow your audience and make friendship but also earns you 5 points."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                5
              </span>
            </div>
            <div
              className="point-reward-type"
              title="By voting you give reward to other creators and show your appreciation but also earn 0.01 x vote weight points."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                0.3
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Share what post you like with your friends and earn 1 points."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                1
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Checking in on Ecency gives you 0.25 points and helps you stay connected with your friends."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                0.25
              </span>
            </div>
            <div
              className="point-reward-type"
              title="When you login into Ecency you are entitled to earn 10 points automatically."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,6A2,2 0 0,0 10,8A2,2 0 0,0 12,10A2,2 0 0,0 14,8A2,2 0 0,0 12,6M12,13C14.67,13 20,14.33 20,17V20H4V17C4,14.33 9.33,13 12,13M12,14.9C9.03,14.9 5.9,16.36 5.9,17V18.1H18.1V17C18.1,16.36 14.97,14.9 12,14.9Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                10
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Consistent use of app gives you extra chances to earn more 10 points, be more active and earn more."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M0.41,13.41L6,19L7.41,17.58L1.83,12M22.24,5.58L11.66,16.17L7.5,12L6.07,13.41L11.66,19L23.66,7M18,7L16.59,5.58L10.24,11.93L11.66,13.34L18,7Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                10
              </span>
            </div>
            <div
              className="point-reward-type"
              title="You can earn ~100 points per day for each 1000HP delegation."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.58,16.8L12,14.5L8.42,16.8L9.5,12.68L6.21,10L10.46,9.74L12,5.8L13.54,9.74L17.79,10L14.5,12.68M20,12C20,10.89 20.9,10 22,10V6C22,4.89 21.1,4 20,4H4A2,2 0 0,0 2,6V10C3.11,10 4,10.9 4,12A2,2 0 0,1 2,14V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V14A2,2 0 0,1 20,12Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                10
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Register your community to get 20 points for per post published with Ecency applications."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,5.5A3.5,3.5 0 0,1 15.5,9A3.5,3.5 0 0,1 12,12.5A3.5,3.5 0 0,1 8.5,9A3.5,3.5 0 0,1 12,5.5M5,8C5.56,8 6.08,8.15 6.53,8.42C6.38,9.85 6.8,11.27 7.66,12.38C7.16,13.34 6.16,14 5,14A3,3 0 0,1 2,11A3,3 0 0,1 5,8M19,8A3,3 0 0,1 22,11A3,3 0 0,1 19,14C17.84,14 16.84,13.34 16.34,12.38C17.2,11.27 17.62,9.85 17.47,8.42C17.92,8.15 18.44,8 19,8M5.5,18.25C5.5,16.18 8.41,14.5 12,14.5C15.59,14.5 18.5,16.18 18.5,18.25V20H5.5V18.25M0,20V18.5C0,17.11 1.89,15.94 4.45,15.6C3.86,16.28 3.5,17.22 3.5,18.25V20H0M24,20H20.5V18.25C20.5,17.22 20.14,16.28 19.55,15.6C22.11,15.94 24,17.11 24,18.5V20Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                20
              </span>
            </div>
          </div>
        </div>
        <div
          className="buy-points"
        >
          <a
            href="#"
            onClick={[Function]}
          >
             
            BUY POINTS
          </a>
        </div>
      </div>
      <div
        className="p-transaction-list"
      >
        <div
          className="transaction-list-header"
        >
          <h2>
            History
          </h2>
          <select
            className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 "
            onChange={[Function]}
            type="select"
            value={0}
          >
            <option
              value="0"
            >
              All History
            </option>
            <option
              value={10}
            >
              Points for heartbeat
            </option>
            <option
              value={20}
            >
              Points for login
            </option>
            <option
              value={30}
            >
              Usage bonus
            </option>
            <option
              value={100}
            >
              Points for post
            </option>
            <option
              value={110}
            >
              Points for comment
            </option>
            <option
              value={120}
            >
              Points for vote
            </option>
            <option
              value={130}
            >
              Points for reblog
            </option>
            <option
              value={150}
            >
              Delegation reward
            </option>
            <option
              value={160}
            >
              Referral reward
            </option>
            <option
              value={170}
            >
              Community reward
            </option>
            <option
              value={998}
            >
              Outgoing transfer
            </option>
            <option
              value={999}
            >
              Incoming transfer
            </option>
          </select>
        </div>
        <div
          className="transaction-list-body"
        >
          <p
            className="text-gray-600 empty-list"
          >
            Nothing here
          </p>
        </div>
      </div>
    </div>
    <div
      className="wallet-menu"
    >
      <a
        className="menu-item ecency active"
        href="/@user1/points"
        onClick={[Function]}
      >
        <span
          className="title"
        >
          Ecency
        </span>
        <span
          className="sub-title"
        >
          Points
        </span>
        <span
          className="platform-logo"
        >
          <img
            alt="ecency"
            src="logo-small-transparent.png"
          />
        </span>
      </a>
      <a
        className="menu-item hive"
        href="/@user1/wallet"
        onClick={[Function]}
      >
        <span
          className="title"
        >
          Hive
        </span>
        <span
          className="sub-title"
        >
          Wallet
        </span>
        <span
          className="platform-logo"
        >
          <svg
            viewBox="0 0 512 512"
          >
            <path
              d="M260.353,254.878,131.538,33.1a2.208,2.208,0,0,0-3.829.009L.3,254.887A2.234,2.234,0,0,0,.3,257.122L129.116,478.9a2.208,2.208,0,0,0,3.83-.009L260.358,257.113A2.239,2.239,0,0,0,260.353,254.878Zm39.078-25.713a2.19,2.19,0,0,0,1.9,1.111h66.509a2.226,2.226,0,0,0,1.9-3.341L259.115,33.111a2.187,2.187,0,0,0-1.9-1.111H190.707a2.226,2.226,0,0,0-1.9,3.341ZM511.7,254.886,384.9,33.112A2.2,2.2,0,0,0,382.99,32h-66.6a2.226,2.226,0,0,0-1.906,3.34L440.652,256,314.481,476.66a2.226,2.226,0,0,0,1.906,3.34h66.6a2.2,2.2,0,0,0,1.906-1.112L511.7,257.114A2.243,2.243,0,0,0,511.7,254.886ZM366.016,284.917H299.508a2.187,2.187,0,0,0-1.9,1.111l-108.8,190.631a2.226,2.226,0,0,0,1.9,3.341h66.509a2.187,2.187,0,0,0,1.9-1.111l108.8-190.631A2.226,2.226,0,0,0,366.016,284.917Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </a>
      <a
        className="menu-item hive-engine"
        href="/@user1/engine"
        onClick={[Function]}
      >
        <span
          className="title"
        >
          Engine
        </span>
        <span
          className="sub-title"
        >
          Tokens
        </span>
        <span
          className="platform-logo"
        >
          <svg
            viewBox="0 0 512 512"
          >
            <path
              d="M 226.63385,494.21287 A 38.3444,37.175214 0 0 0 153.83361,475.22554 257.02086,249.18385 0 0 1 103.53493,447.0743 38.334092,37.165221 0 0 0 50.192923,395.44372 253.78942,246.05095 0 0 1 21.179508,346.66625 38.3444,37.175214 0 0 0 1.66458,276.06583 a 254.27646,246.52314 0 0 1 0,-56.32245 38.334092,37.165221 0 0 0 19.576775,-70.59294 256.99767,249.16137 0 0 1 29.034029,-48.77497 38.3444,37.175214 0 0 0 53.256966,-51.73051 254.23523,246.48315 0 0 1 50.30899,-28.111257 38.3444,37.175214 0 0 0 72.83374,-18.9198855 254.18884,246.43819 0 0 1 58.08353,0 38.334092,37.165221 0 0 0 72.78993,18.9873395 257.52851,249.67603 0 0 1 50.29867,28.143736 38.3444,37.175214 0 0 0 53.35748,51.630577 254.03681,246.29078 0 0 1 28.99538,48.79496 38.3444,37.175214 0 0 0 19.51235,70.59293 253.70438,245.9685 0 0 1 0,56.35244 38.334092,37.165221 0 0 0 -19.58451,70.57044 257.22186,249.37873 0 0 1 -29.0366,48.76749 38.3444,37.175214 0 0 0 -53.25697,51.7305 253.44927,245.72117 0 0 1 -50.3296,28.11126 38.3444,37.175214 0 0 0 -72.81055,18.91989 252.9545,245.24149 0 0 1 -58.07322,0 z M 63.98196,247.91459 A 191.72201,185.87607 0 1 0 255.70396,62.03853 191.72201,185.87607 0 0 0 63.98196,247.91459 Z M 192.92274,388.54083 353.40745,282.97622 256.9383,212.2159 328.06098,111.68043 A 158.05726,153.23783 0 0 1 192.92274,388.54083 Z M 112.80407,182.5157 A 158.05984,153.24032 0 0 1 319.96175,107.90295 L 159.19101,213.45507 256.30438,282.98621 185.06832,384.9932 A 158.05984,153.24032 0 0 1 112.80407,182.5157 Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </a>
      <a
        className="menu-item spk"
        href="/@user1/spk"
        onClick={[Function]}
      >
        <span
          className="title"
        >
          SPK
        </span>
        <span
          className="sub-title"
        >
          Tokens
        </span>
        <span
          className="platform-logo"
        >
          <svg
            viewBox="0 0 512 512"
          >
            <path
              clipRule="evenodd"
              d="M508.297 4.47022L426.843 94.3876L512 207.049L432.661 208.107L382.942 140.933L367.603 155.743V208.107H299.901V144.107C299.901 144.107 291.967 150.454 279.273 153.627C266.579 156.801 253.355 156.801 253.355 156.801H213.686V208.107H145.455V199.644C145.455 199.644 131.702 212.338 90.4463 212.867C49.1901 213.396 0 190.652 0 190.652L23.2727 141.462C23.2727 141.462 62.9421 161.561 90.4463 159.446C117.95 157.33 114.777 148.867 114.777 148.867C114.777 138.25 96.648 134.663 73.3864 130.06C68.8348 129.159 64.0868 128.22 59.2397 127.181C29.6198 120.834 4.2314 107.237 4.2314 68.4702C4.2314 -13.5133 123.769 0.23893 131.702 1.8257C139.636 3.41246 143.868 4.47022 143.868 4.47022H253.355C253.355 4.47022 263.405 4.47022 279.802 8.70172C296.198 12.9332 299.901 18.7512 299.901 18.7512V4.47022H367.603V75.8752L435.306 4.47022H508.297ZM145.455 64.2389V91.2141C145.455 91.2141 126.942 85.3959 110.545 80.6356C106.006 79.3176 100.979 78.405 96.0835 77.5162C83.2978 75.195 71.405 73.0359 71.405 64.2389C71.405 52.0736 92.0331 51.0158 107.901 52.6025C123.769 54.1893 145.455 64.2389 145.455 64.2389ZM214.215 57.8918V104.966H246.479C259.438 101.925 266.05 92.8009 266.05 81.1645C266.05 71.6041 261.818 61.0654 246.479 57.8918H214.215Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`(3) Active user with unclaimed points 1`] = `
<div
  className="wallet-ecency"
>
  <div
    className="wallet-main"
  >
    <div
      className="wallet-info"
    >
      <div
        className="balance-row alternative"
      >
        <div
          className="balance-info"
        >
          <div
            className="title"
          >
            Ecency Points
          </div>
          <div
            className="description"
          >
            Points can be used for in-app services, like Promote, Boost, Gifting. Earn them just by using Ecency apps and improve your experience.
          </div>
        </div>
        <div
          className="balance-values"
        >
          <div
            className="amount"
          >
            <div
              className="amount-actions"
            />
            0.000
             
            POINTS
          </div>
        </div>
      </div>
      <div
        className="balance-row estimated alternative"
      >
        <div
          className="balance-info"
        >
          <div
            className="title"
          >
            Estimated Points Value
          </div>
          <div
            className="description"
          >
            The estimated value is based on purchase value of Points.
          </div>
        </div>
        <div
          className="balance-values"
        >
          <div
            className="amount amount-bold"
          >
            $ 0.000
          </div>
        </div>
      </div>
      <div
        className="get-points"
      >
        <div
          className="points-types"
        >
          <div
            className="points-types-title"
          >
            How to earn more Points
          </div>
          <div
            className="points-types-list"
          >
            <div
              className="point-reward-type"
              title="You can earn point by posting regularly. Posting gives you 15 points."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                15
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Each comment you make helps you to grow your audience and make friendship but also earns you 5 points."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                5
              </span>
            </div>
            <div
              className="point-reward-type"
              title="By voting you give reward to other creators and show your appreciation but also earn 0.01 x vote weight points."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                0.3
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Share what post you like with your friends and earn 1 points."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                1
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Checking in on Ecency gives you 0.25 points and helps you stay connected with your friends."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                0.25
              </span>
            </div>
            <div
              className="point-reward-type"
              title="When you login into Ecency you are entitled to earn 10 points automatically."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,6A2,2 0 0,0 10,8A2,2 0 0,0 12,10A2,2 0 0,0 14,8A2,2 0 0,0 12,6M12,13C14.67,13 20,14.33 20,17V20H4V17C4,14.33 9.33,13 12,13M12,14.9C9.03,14.9 5.9,16.36 5.9,17V18.1H18.1V17C18.1,16.36 14.97,14.9 12,14.9Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                10
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Consistent use of app gives you extra chances to earn more 10 points, be more active and earn more."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M0.41,13.41L6,19L7.41,17.58L1.83,12M22.24,5.58L11.66,16.17L7.5,12L6.07,13.41L11.66,19L23.66,7M18,7L16.59,5.58L10.24,11.93L11.66,13.34L18,7Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                10
              </span>
            </div>
            <div
              className="point-reward-type"
              title="You can earn ~100 points per day for each 1000HP delegation."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.58,16.8L12,14.5L8.42,16.8L9.5,12.68L6.21,10L10.46,9.74L12,5.8L13.54,9.74L17.79,10L14.5,12.68M20,12C20,10.89 20.9,10 22,10V6C22,4.89 21.1,4 20,4H4A2,2 0 0,0 2,6V10C3.11,10 4,10.9 4,12A2,2 0 0,1 2,14V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V14A2,2 0 0,1 20,12Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                10
              </span>
            </div>
            <div
              className="point-reward-type"
              title="Register your community to get 20 points for per post published with Ecency applications."
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,5.5A3.5,3.5 0 0,1 15.5,9A3.5,3.5 0 0,1 12,12.5A3.5,3.5 0 0,1 8.5,9A3.5,3.5 0 0,1 12,5.5M5,8C5.56,8 6.08,8.15 6.53,8.42C6.38,9.85 6.8,11.27 7.66,12.38C7.16,13.34 6.16,14 5,14A3,3 0 0,1 2,11A3,3 0 0,1 5,8M19,8A3,3 0 0,1 22,11A3,3 0 0,1 19,14C17.84,14 16.84,13.34 16.34,12.38C17.2,11.27 17.62,9.85 17.47,8.42C17.92,8.15 18.44,8 19,8M5.5,18.25C5.5,16.18 8.41,14.5 12,14.5C15.59,14.5 18.5,16.18 18.5,18.25V20H5.5V18.25M0,20V18.5C0,17.11 1.89,15.94 4.45,15.6C3.86,16.28 3.5,17.22 3.5,18.25V20H0M24,20H20.5V18.25C20.5,17.22 20.14,16.28 19.55,15.6C22.11,15.94 24,17.11 24,18.5V20Z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="reward-num"
              >
                20
              </span>
            </div>
          </div>
        </div>
        <div
          className="buy-points"
        >
          <a
            href="#"
            onClick={[Function]}
          >
             
            BUY POINTS
          </a>
        </div>
      </div>
      <div
        className="p-transaction-list"
      >
        <div
          className="transaction-list-header"
        >
          <h2>
            History
          </h2>
          <select
            className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 "
            onChange={[Function]}
            type="select"
            value={0}
          >
            <option
              value="0"
            >
              All History
            </option>
            <option
              value={10}
            >
              Points for heartbeat
            </option>
            <option
              value={20}
            >
              Points for login
            </option>
            <option
              value={30}
            >
              Usage bonus
            </option>
            <option
              value={100}
            >
              Points for post
            </option>
            <option
              value={110}
            >
              Points for comment
            </option>
            <option
              value={120}
            >
              Points for vote
            </option>
            <option
              value={130}
            >
              Points for reblog
            </option>
            <option
              value={150}
            >
              Delegation reward
            </option>
            <option
              value={160}
            >
              Referral reward
            </option>
            <option
              value={170}
            >
              Community reward
            </option>
            <option
              value={998}
            >
              Outgoing transfer
            </option>
            <option
              value={999}
            >
              Incoming transfer
            </option>
          </select>
        </div>
        <div
          className="transaction-list-body"
        >
          <p
            className="text-gray-600 empty-list"
          >
            Nothing here
          </p>
        </div>
      </div>
    </div>
    <div
      className="wallet-menu"
    >
      <a
        className="menu-item ecency active"
        href="/@user1/points"
        onClick={[Function]}
      >
        <span
          className="title"
        >
          Ecency
        </span>
        <span
          className="sub-title"
        >
          Points
        </span>
        <span
          className="platform-logo"
        >
          <img
            alt="ecency"
            src="logo-small-transparent.png"
          />
        </span>
      </a>
      <a
        className="menu-item hive"
        href="/@user1/wallet"
        onClick={[Function]}
      >
        <span
          className="title"
        >
          Hive
        </span>
        <span
          className="sub-title"
        >
          Wallet
        </span>
        <span
          className="platform-logo"
        >
          <svg
            viewBox="0 0 512 512"
          >
            <path
              d="M260.353,254.878,131.538,33.1a2.208,2.208,0,0,0-3.829.009L.3,254.887A2.234,2.234,0,0,0,.3,257.122L129.116,478.9a2.208,2.208,0,0,0,3.83-.009L260.358,257.113A2.239,2.239,0,0,0,260.353,254.878Zm39.078-25.713a2.19,2.19,0,0,0,1.9,1.111h66.509a2.226,2.226,0,0,0,1.9-3.341L259.115,33.111a2.187,2.187,0,0,0-1.9-1.111H190.707a2.226,2.226,0,0,0-1.9,3.341ZM511.7,254.886,384.9,33.112A2.2,2.2,0,0,0,382.99,32h-66.6a2.226,2.226,0,0,0-1.906,3.34L440.652,256,314.481,476.66a2.226,2.226,0,0,0,1.906,3.34h66.6a2.2,2.2,0,0,0,1.906-1.112L511.7,257.114A2.243,2.243,0,0,0,511.7,254.886ZM366.016,284.917H299.508a2.187,2.187,0,0,0-1.9,1.111l-108.8,190.631a2.226,2.226,0,0,0,1.9,3.341h66.509a2.187,2.187,0,0,0,1.9-1.111l108.8-190.631A2.226,2.226,0,0,0,366.016,284.917Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </a>
      <a
        className="menu-item hive-engine"
        href="/@user1/engine"
        onClick={[Function]}
      >
        <span
          className="title"
        >
          Engine
        </span>
        <span
          className="sub-title"
        >
          Tokens
        </span>
        <span
          className="platform-logo"
        >
          <svg
            viewBox="0 0 512 512"
          >
            <path
              d="M 226.63385,494.21287 A 38.3444,37.175214 0 0 0 153.83361,475.22554 257.02086,249.18385 0 0 1 103.53493,447.0743 38.334092,37.165221 0 0 0 50.192923,395.44372 253.78942,246.05095 0 0 1 21.179508,346.66625 38.3444,37.175214 0 0 0 1.66458,276.06583 a 254.27646,246.52314 0 0 1 0,-56.32245 38.334092,37.165221 0 0 0 19.576775,-70.59294 256.99767,249.16137 0 0 1 29.034029,-48.77497 38.3444,37.175214 0 0 0 53.256966,-51.73051 254.23523,246.48315 0 0 1 50.30899,-28.111257 38.3444,37.175214 0 0 0 72.83374,-18.9198855 254.18884,246.43819 0 0 1 58.08353,0 38.334092,37.165221 0 0 0 72.78993,18.9873395 257.52851,249.67603 0 0 1 50.29867,28.143736 38.3444,37.175214 0 0 0 53.35748,51.630577 254.03681,246.29078 0 0 1 28.99538,48.79496 38.3444,37.175214 0 0 0 19.51235,70.59293 253.70438,245.9685 0 0 1 0,56.35244 38.334092,37.165221 0 0 0 -19.58451,70.57044 257.22186,249.37873 0 0 1 -29.0366,48.76749 38.3444,37.175214 0 0 0 -53.25697,51.7305 253.44927,245.72117 0 0 1 -50.3296,28.11126 38.3444,37.175214 0 0 0 -72.81055,18.91989 252.9545,245.24149 0 0 1 -58.07322,0 z M 63.98196,247.91459 A 191.72201,185.87607 0 1 0 255.70396,62.03853 191.72201,185.87607 0 0 0 63.98196,247.91459 Z M 192.92274,388.54083 353.40745,282.97622 256.9383,212.2159 328.06098,111.68043 A 158.05726,153.23783 0 0 1 192.92274,388.54083 Z M 112.80407,182.5157 A 158.05984,153.24032 0 0 1 319.96175,107.90295 L 159.19101,213.45507 256.30438,282.98621 185.06832,384.9932 A 158.05984,153.24032 0 0 1 112.80407,182.5157 Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </a>
      <a
        className="menu-item spk"
        href="/@user1/spk"
        onClick={[Function]}
      >
        <span
          className="title"
        >
          SPK
        </span>
        <span
          className="sub-title"
        >
          Tokens
        </span>
        <span
          className="platform-logo"
        >
          <svg
            viewBox="0 0 512 512"
          >
            <path
              clipRule="evenodd"
              d="M508.297 4.47022L426.843 94.3876L512 207.049L432.661 208.107L382.942 140.933L367.603 155.743V208.107H299.901V144.107C299.901 144.107 291.967 150.454 279.273 153.627C266.579 156.801 253.355 156.801 253.355 156.801H213.686V208.107H145.455V199.644C145.455 199.644 131.702 212.338 90.4463 212.867C49.1901 213.396 0 190.652 0 190.652L23.2727 141.462C23.2727 141.462 62.9421 161.561 90.4463 159.446C117.95 157.33 114.777 148.867 114.777 148.867C114.777 138.25 96.648 134.663 73.3864 130.06C68.8348 129.159 64.0868 128.22 59.2397 127.181C29.6198 120.834 4.2314 107.237 4.2314 68.4702C4.2314 -13.5133 123.769 0.23893 131.702 1.8257C139.636 3.41246 143.868 4.47022 143.868 4.47022H253.355C253.355 4.47022 263.405 4.47022 279.802 8.70172C296.198 12.9332 299.901 18.7512 299.901 18.7512V4.47022H367.603V75.8752L435.306 4.47022H508.297ZM145.455 64.2389V91.2141C145.455 91.2141 126.942 85.3959 110.545 80.6356C106.006 79.3176 100.979 78.405 96.0835 77.5162C83.2978 75.195 71.405 73.0359 71.405 64.2389C71.405 52.0736 92.0331 51.0158 107.901 52.6025C123.769 54.1893 145.455 64.2389 145.455 64.2389ZM214.215 57.8918V104.966H246.479C259.438 101.925 266.05 92.8009 266.05 81.1645C266.05 71.6041 261.818 61.0654 246.479 57.8918H214.215Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`(4) Format memo 1`] = `
Array [
  <React.Fragment>
    
     
  </React.Fragment>,
]
`;

exports[`(4) Format memo 2`] = `
Array [
  <React.Fragment>
    transfer
     
  </React.Fragment>,
]
`;

exports[`(4) Format memo 3`] = `
Array [
  <React.Fragment>
    thank
     
  </React.Fragment>,
  <React.Fragment>
    you!
     
  </React.Fragment>,
]
`;

exports[`(4) Format memo 4`] = `
Array [
  <React.Fragment>
    Promotion
     
  </React.Fragment>,
  <React.Fragment>
    price
     
  </React.Fragment>,
  <React.Fragment>
    for
     
  </React.Fragment>,
  <React.Fragment>
    <EntryLink
      entry={
        Object {
          "author": "foo",
          "category": "ecency",
          "permlink": "bar",
        }
      }
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <span>
        @
        foo
        /
        bar
      </span>
    </EntryLink>
     
  </React.Fragment>,
]
`;

exports[`(4) Format memo 5`] = `
Array [
  <React.Fragment>
    Refund
     
  </React.Fragment>,
  <React.Fragment>
    for
     
  </React.Fragment>,
  <React.Fragment>
    <EntryLink
      entry={
        Object {
          "author": "foo",
          "category": "ecency",
          "permlink": "bar",
        }
      }
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <span>
        @
        foo
        /
        bar
      </span>
    </EntryLink>
     
  </React.Fragment>,
]
`;

exports[`(4) Format memo 6`] = `
Array [
  <React.Fragment>
    Community
     
  </React.Fragment>,
  <React.Fragment>
    reward
     
  </React.Fragment>,
  <React.Fragment>
    for
     
  </React.Fragment>,
  <React.Fragment>
    <EntryLink
      entry={
        Object {
          "author": "foo",
          "category": "ecency",
          "permlink": "bar",
        }
      }
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <span>
        @
        foo
        /
        bar
      </span>
    </EntryLink>
     
  </React.Fragment>,
]
`;

exports[`(4) Format memo 7`] = `
Array [
  <React.Fragment>
    lorem
     
  </React.Fragment>,
  <React.Fragment>
    <EntryLink
      entry={
        Object {
          "author": "foo",
          "category": "ecency",
          "permlink": "bar",
        }
      }
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <span>
        @
        foo
        /
        bar
      </span>
    </EntryLink>
     
  </React.Fragment>,
  <React.Fragment>
    ipsum
     
  </React.Fragment>,
]
`;

exports[`(5) usePrivate = false 1`] = `null`;
